@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2022-10-19T08:37:52Z",
+  "timestamp" : "2022-10-20T02:08:31Z",
   "count_outdated" : 2501,
   "uniques_outdated" : 643,
-  "count" : 2566,
+  "count" : 2567,
   "uniques" : 682,
   "clones" : [
     {
@@ -84,8 +84,8 @@
     },
     {
       "timestamp": "2022-10-19T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ]
     }
