@@ -1,5 +1,5 @@
 {
-  "count": 65,
+  "count": 66,
   "uniques": 25,
   "clones": [
     {
@@ -59,7 +59,7 @@
     },
     {
       "timestamp": "2022-10-19T00:00:00Z",
-      "count": 1,
+      "count": 2,
       "uniques": 1
     }
   ]
