@@ -1,3 +1,11 @@
+2022-10-20T02:08:31Z:
+* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3286312833 # 951
+* notice: last 14d: unq all: 25 66
+* notice: prev accum: outdated-unq outdated-all / unq all: 643 2501 / 682 2566
+* notice: next accum: outdated-unq outdated-all / unq all: 643 2501 / 682 2567
+* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -0 / +1 +2 -0 -0 / 1 2
+* notice: removed / changed dates: [] / [2022-10-19]
+
 2022-10-19T08:37:52Z:
 * notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/3280028192 # 949
 * notice: last 14d: unq all: 25 65
